<resources>

    <string name="app_name">Hot or Not</string>
    <string name="textView_main">Ｏ(≧▽≦)Ｏ</string>
    <string name="textView_main_change">ヾ(´∀｀○)ﾉ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not">Not</string>
    <string name="pesho">Pesho</string>
    <string name="hot">Hot</string>
    <string name="stan">Stan</string>
    <string name="georgi">Georgi</string>
    <string name="information">Information</string>
    <string name="firstname_lastname">FirstName + LastName</string>
    <string name="email">Email</string>
    <string name="sex">Sex</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="other">Other</string>
    <string name="register">REGISTER</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>

    <string-array name="interests">
        <item>@string/interests_apache_helicopters</item>
        <item>@string/interests_males</item>
        <item>@string/interests_females</item>
        <item>@string/interests_drag_queens</item>
        <item>@string/interests_furries</item>
    </string-array>

    <string name="interests_apache_helicopters">Apache Helicopters</string>
    <string name="interests_males">Males</string>
    <string name="interests_females">Females</string>
    <string name="interests_drag_queens">Drag Queens</string>
    <string name="interests_furries">Furries</string>

    <string name="return_text">Can\'t be empty!</string>
    <string name="return_email_text">Invalid Email Address!</string>

    <string name="image_text">image/*</string>

    <string name="select_toast">You select </string>
    <string name="error_toast">Please select one of our options!</string>
    <string name="field_toast">Field is required!</string>

    <string name="text_alert_dialog">Are you sure!</string>
    <string name="question_alert_dialog">Do you want to close the app?</string>
    <string name="yes_alert_dialog">Yes</string>
    <string name="no_alert_dialog">No</string>

    <string name="type_email_intent">"text/plain"</string>

    <string name="i_am">I am</string>
    <string name="who_is_hot">Who Is   HOT ?</string>
    <string name="cant_run_from_yourself">Can\'t run from yourself!!</string>

    <string-array name="characteristics_array">
        <item>@string/characteristic_traveling</item>
        <item>@string/characteristic_techno_lover</item>
        <item>@string/characteristic_animal_lover</item>
        <item>@string/characteristic_training</item>
        <item>@string/characteristic_reading</item>
        <item>@string/characteristic_swimming</item>
        <item>@string/characteristic_skiing</item>
        <item>@string/characteristic_biking</item>
        <item>@string/characteristic_boxing</item>
        <item>@string/characteristic_fishing</item>
    </string-array>

    <string name="characteristic_traveling">TRAVELING</string>
    <string name="characteristic_techno_lover">TECHNO LOVER</string>
    <string name="characteristic_animal_lover">ANIMAL LOVER</string>
    <string name="characteristic_training">TRAINING</string>
    <string name="characteristic_reading">READING</string>
    <string name="characteristic_swimming">SWIMMING</string>
    <string name="characteristic_skiing">SKIING</string>
    <string name="characteristic_biking">BIKING</string>
    <string name="characteristic_boxing">BOXING</string>
    <string name="characteristic_fishing">FISHING</string>

</resources>