<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.RegistrationScreenFragment">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressInd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/no_dimen"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressInd">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/medium_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtFirstName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    enableError=""
                    errorText=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/medium_margin"
                    app:counterEnabled="true"
                    app:counterMaxLength="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgReg">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/firstname"
                        android:inputType="text"
                        android:maxLength="100"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtLastName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    enableError=""
                    errorText=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/small_margin"
                    app:counterEnabled="true"
                    app:counterMaxLength="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtFirstName">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/lastname"
                        android:inputType="text"
                        android:maxLength="100"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtEmailReg"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    enableError=""
                    errorText=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/small_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtLastName">

                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtEmailReg">

                    <RadioButton
                        android:id="@+id/btnRadioMan"
                        android:layout_width="@dimen/no_dimen"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/man" />

                    <RadioButton
                        android:id="@+id/btnRadioWoman"
                        android:layout_width="@dimen/no_dimen"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/woman" />

                    <RadioButton
                        android:id="@+id/btnRadioOther"
                        android:layout_width="@dimen/no_dimen"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:hint="@string/other" />
                </RadioGroup>

                <Spinner
                    android:id="@+id/spinnerMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/medium_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rgGender" />

                <Button
                    android:id="@+id/btnReg"
                    style="@style/Widget.Design.CollapsingToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/large_margin"
                    android:layout_marginVertical="@dimen/large_margin"
                    android:layout_marginStart="@dimen/large_margin"
                    android:layout_marginTop="@dimen/large_margin"
                    android:hint="@string/registration"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/spinnerMenu"
                    app:rippleColor="@color/cardview_dark_background" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>