<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/btn_reg_background"
        tools:context=".fragments.MainScreenFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/xxsmall_margin_layout"
            app:cardCornerRadius="@dimen/large_radius"
            app:cardElevation="@dimen/xxxsmall_elevation"
            app:contentPadding="@dimen/xsmall_padding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/xsmall_padding">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:src="@drawable/pesho"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pesho"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/medium_margin"
                    android:drawableStart="@drawable/ic_baseline_email_icon"
                    android:drawablePadding="@dimen/medium_margin"
                    android:src="@drawable/ic_baseline_email_icon"
                    android:text="@string/email"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="italic"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtName" />

<!--                <com.google.android.material.chip.ChipGroup-->
<!--                    android:id="@+id/chipGroup"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="@dimen/medium_margin"-->
<!--                    android:clickable="false"-->
<!--                    app:layout_constraintTop_toBottomOf="@id/email"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent">-->

<!--                    <com.google.android.material.chip.Chip-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"/>-->
<!--                </com.google.android.material.chip.ChipGroup>-->
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/xsmall_margin"
            android:background="@color/teal_700"
            android:text="@string/not"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnRight"
            app:layout_constraintHorizontal_bias="@integer/horizontal_bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="@integer/width_percent" />

        <Button
            android:id="@+id/btnRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/xsmall_margin"
            android:background="@color/hot"
            android:text="@string/hot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@integer/horizontal_bias"
            app:layout_constraintStart_toEndOf="@+id/btnLeft"
            app:layout_constraintWidth_percent="@integer/width_percent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>